<resources>
    <string name="app_name">FreeMan</string>


    <string name="app_home">首页</string>
    <string name="app_discovery">发现</string>
    <string name="app_personal">我的</string>
    <string name="app_setting">设置</string>
    <string name="app_recommend">推荐</string>

    <string name="app_shimmer_text">欢迎欢迎，热烈欢迎</string>

    <string name="action_settings">设置</string>
    <string name="app_description">Android drawer icon with material design animation</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="load_more">加载中...</string>
    <string name="load_error">加载失败,点击重试</string>
    <string name="time_format">00:00</string>
    <string name="action_recommend">推荐好友</string>
    <string name="action_feedback">意见反馈</string>
    <string name="action_search">搜索</string>
    <string name="action_share">分享</string>
    <string name="action_grade">赏个好评</string>
    <string name="action_favoriter">收藏</string>
    <string name="setting_factory">小白作坊</string>
    <string name="setting_factory_web">https://github.com/guoxiaojun001/FreeMan</string>
    <string name="setting_email">联系我们</string>
    <string name="setting_email_username">邮箱 : test@163.com</string>
    <string name="setting_pay">简介</string>
    <string name="setting_pay_username">其他 : test@163.com</string>

    <string name="small_header">Header</string>

    <string name="action_remove_group">移除分组</string>
    <string name="action_remove_child">移除分组子条目</string>
    <string name="action_expand_toggle">展开切换</string>
    <string name="add_group">添加组</string>
    <string name="scan_files">正在检索所有文件</string>
    <string name="random_add">随机添加</string>
    <string name="random_remove">随机移除</string>
    <string name="my_channel">我的频道</string>
    <string name="add_channel">添加频道</string>
    <string name="channel_tip">长按拖动频道可排序</string>
    <string name="channel_sort_delete">排序/删除</string>
    <string name="more_channel">更多频道</string>
    <string name="input_like_channel">输入你感兴趣的频道</string>
    <string name="complete">完成</string>

</resources>
